# yawm

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose-test.yml  docker-compose.yml  pytest.ini
.github/workflows/: lint.yml  tests.yml
backend/: .coveragerc  .dockerignore  .env.example  .flake8  Pipfile  __init__.py  dev-requirements.txt  main.py  pyproject.toml  pytest-docker.ini  pytest.ini  requirements.txt  tox.ini
backend/api/: __init__.py  config.py
backend/api/handlers/: __init__.py  wishlist.py
backend/api/models/: __init__.py  wishlist.py
backend/api/v1/: __init__.py
backend/api/v1/handlers/: __init__.py  auth.py  product.py  security.py  utils.py  wishlist.py  wishlist_product.py
backend/api/v1/schemas/: __init__.py  product.py  wishlist.py  wishlist_products.py
backend/api/v2/: __init__.py
backend/api/v2/handlers/: __init__.py  security.py  wishlist.py  wishlist_product.py
backend/api/v2/schemas/: __init__.py  product.py  wishlist.py  wishlist_products.py
backend/app/: __init__.py  config.py  main.py
backend/app/handlers/: wishlist.py
backend/app/models/: __init__.py  wishlist.py
backend/core/: __init__.py  config.py
backend/core/database/: __init__.py
backend/core/database/migrations/: env.py
backend/core/database/migrations/versions/: 2fe62de7662f_editable_product_name.py  39ac88efc647_user_updates.py  47ff2b4be24c_product_updates.py  85b9bef9bbee_initial_migration.py  b13c977f28a7_wishlist_entity_schema.py  fc713dae054e_initial.py
backend/core/database/models/: __init__.py  security.py  wishlist.py
backend/core/database/models/security/: __init__.py  auth.py
backend/core/health/: __init__.py
backend/core/schemas/: __init__.py  product.py  security.py  utils.py  wishlist.py  wishlist_products.py
backend/core/schemas/security/: __init__.py  auth.py  oauth2.py  user.py
backend/core/services/: __init__.py  auth.py  web.py
backend/core/services/security/: __init__.py  auth.py
backend/core/utils/: __init__.py  default_names.py  exceptions.py  fastapi_pagination.py  gino_models.py  pydantic_models.py
backend/docker/python/: Dockerfile
backend/docker/tests-python/: Dockerfile
backend/migrations/: __init__.py  env.py  script.py.mako
backend/migrations/versions/: b13c977f28a7_wishlist_entity_schema.py  f8bf1d5305f3_wishlist_entity_schema.py
backend/tests/: .env.example  conftest.py  test_api_v1_wishlist.py  test_api_v2_wishlist.py  test_api_wishlist.py  test_core_auth.py  test_core_health.py  test_core_user.py  test_page_parser.py  test_wishlist_api.py
backend/tests/snapshots/: snap_test_api_v1_wishlist.py  snap_test_api_wishlist.py  snap_test_page_parser.py
caddy/: Caddyfile.live  Caddyfile.static
caddy/docker/: Dockerfile
docker/: docker-compose-test.yml  docker-compose.yml
docker/python/: Dockerfile
docs/schemas/: README.md  wl_schema.drawio
k8s/backend/: deployment.yml  secret.yml.example  service.yml
k8s/job/: migration.yml  secret.yml.example
k8s/namespace/: ns.yml
k8s/postgres/: postgres-deployment.yml  postgres-pv.yml  postgres-pvc.yml  postgres-service.yml  secret.yml.example
yawm/: __init__.py  main.py
