[tool.poetry]
name = "yawm-backend"
version = "0.4.0"
description = "Yet another wishlist maker"
authors = ["Aleksei Devyatkin <aleksei@devyatkin.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gino-starlette = "^0.1.4"
fastapi = "^0.75.1"
ujson = "^5.2.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"
fastapi-pagination = {extras = ["gino"], version = "^0.9.1"}
httpx = "^0.22.0"
uvloop = "^0.16.0"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = "^1.7.4"
coolname = "^1.1.0"
fastapi-health = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
requests = "^2.27.1"
pre-commit = "^2.18.1"
async-asgi-testclient = "^1.4.10"
pytest-asyncio = "^0.18.3"
pytest-alembic = "^0.8.1"
snapshottest = "^0.6.0"
pytest-dotenv = "^0.5.2"
pytest-httpx = "^0.20.0"
mypy = "^0.942"
google-auth = "^2.6.2"
google-auth-oauthlib = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
